added projects page and created a parser for the mini language

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,11 @@ license = {text = "SSPLv1"}
 
 [tool.uv.sources]
 yet-another-comfy-client = { git = "https://github.com/rm4n0s/yet-another-comfy-client" }
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
