--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 # db_path: ":memory:"
 db_path: ./.private/db.sqlite3
+result_path: ./.private/result_images
 controlnet_references_path: ./.private/controlnet_images
 ipadapter_references_path: ./.private/ipadapter_images
 thumbnails_path: ./.private/thumbnail_images
