--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "aiosqlite==0.21.0",
     "mashumaro>=3.17",
     "nicegui>=3.4.0",
+    "numpy>=2.4.1",
     "pytsterrors>=0.4.1",
     "tortoise-orm==0.25.1",
     "yet-another-comfy-client",
